devops-project/k8s/dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-dashboard
  labels:
    app: devops-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-dashboard
  template:
    metadata:
      labels:
        app: devops-dashboard
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: dashboard-files
          mountPath: /usr/share/nginx/html
      volumes:
      - name: dashboard-files
        configMap:
          name: devops-dashboard-files
---
apiVersion: v1
kind: Service
metadata:
  name: devops-dashboard-svc
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-subnets: subnet-091b07fc5d343664d,subnet-0eed778d3561734d5
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: devops-dashboard
