devops-project/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-frontend-svc
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-subnets: "subnet-091b07fc5d343664d,subnet-0eed778d3561734d5"
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: devops-frontend
