devops-project/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-demo-svc
  labels:
    app: devops-demo
spec:
  type: LoadBalancer # Exposes the service via Cloud Provider's LB
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: devops-demo
